          advertisements (RAs).

        * The RouteMetric= option (for DHCPv4, DHCPv6, and IPv6 advertised
          routes) now accepts three values, for high, medium, and low preference
          of the router (which can be set with the RouterPreference=) setting.

        * systemd-networkd-wait-online now supports alternative interface names.

        Changes in systemd-dissect:

        * systemd-dissect gained a new option --list, to print the paths fo the
          files and directories in the image.

        * systemd-dissect gained a new option --mtree, to generate output
          compatible with BSD mtree(5).

        * systemd-dissect gained a new option --with, to execute a command in
          the image temporarily mounted.

        * systemd-dissect gained a new option --discover, to search for
          Discoverable Disk Images (DDIs) in well-known directories. This will
          list machine, portable service and system extension disk images.

        * systemd-dissect now understands 2nd stage initrd images stored as a
          Discoverable Disk Image (DDI).

        Changes in systemd-repart:

        * systemd-repart gained new options --include-partitions and
          --exclude-partitions to filter operation on partitions by type UUID.
          This allows systemd-repart to be used to build images in which the
          type of one partition is set based on the contents of another
          partition (for example when the boot partition shall include a verity
          hash of the root partition).

        * systemd-repart now supports erofs (a read-only file system similar to
          squashfs).

        Changes in systemd-homed:

        * systemd-homed gained support for luksPbkdfForceIterations (the
          intended number of iterations for the PBKDF operation on LUKS).

        Changes in systemd-homenamed:

        * systemd-homed now exports the contents of